fix scaling of acknowledgements button on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -58,7 +58,8 @@
     padding-bottom: 2px;
   }
 
-  .credits {
+  .credits,
+  #opener2 {
     font-size: 12px;
   }
 }
